# simple-rag-demo

./: .gitignore  Makefile  README.md  pyproject.toml
src/: db.py  embeddings.py  llm.py  main.py
