[project]
name = "chang-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.5.23",
    "fastapi>=0.115.6",
    "python-multipart>=0.0.19",
    "sentence-transformers>=3.3.1",
    "setuptools>=75.6.0",
    "uvicorn>=0.32.1",
    "vllm>=0.6.4.post1",
]
